# CMakeSandbox

./: CMakeLists.txt  README.md  Version.h.in
Impl/: CMakeLists.txt  main.cpp
TestLibrary/: CMakeLists.txt  exported.h  library.cpp  library.h  main.cpp
